# generic_useful_code_for_other_projects

./: README.md  pyproject.toml
src/gucfop/aws/: secrets_manager.py
src/gucfop/database/influxdb/: InfluxDbTool.py
src/gucfop/database/mongodb/: MongoDbTool.py
src/gucfop/strings/: strings.py
