[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "gucfop"
version = "0.0.1"
authors = [
  { name="Audentis Systems", email="contact@audentissystems.com" },
]
description = "Generic Useful Code for Other Projects (gucfop)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
	     'boto3',
]


[project.urls]
Homepage = "https://github.com/audentis-systems/generic_useful_code_for_other_projects"
Issues = "https://github.com/audentis-systems/generic_useful_code_for_other_projects/issues"
